[gd_scene load_steps=9 format=2]

[ext_resource path="res://Themes/Default/ButtonIcons/Play_Active.svg" type="Texture" id=1]
[ext_resource path="res://Themes/Default/ButtonIcons/Pause_Inactive.svg" type="Texture" id=2]
[ext_resource path="res://Themes/Default/ButtonIcons/Stop_Active.svg" type="Texture" id=3]
[ext_resource path="res://Themes/Default/ButtonIcons/Play_Inactive.svg" type="Texture" id=4]
[ext_resource path="res://Themes/Default/ButtonIcons/Pause_Active.svg" type="Texture" id=5]
[ext_resource path="res://Themes/Default/ButtonIcons/Stop_Inactive.svg" type="Texture" id=6]
[ext_resource path="res://Editor/Scenes/ControlPanel/ControlPanel.gd" type="Script" id=7]
[ext_resource path="res://Themes/Default/ButtonIcons/Add.svg" type="Texture" id=8]

[node name="ControlPanel" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = -5.0
custom_constants/separation = 10
alignment = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 565.0
margin_right = 595.0
margin_bottom = 710.0
rect_min_size = Vector2( 30, 30 )
texture_normal = ExtResource( 1 )
texture_disabled = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="PauseButton" type="TextureButton" parent="."]
margin_left = 605.0
margin_right = 635.0
margin_bottom = 710.0
rect_min_size = Vector2( 30, 30 )
disabled = true
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="StopButton" type="TextureButton" parent="."]
margin_left = 645.0
margin_right = 675.0
margin_bottom = 710.0
rect_min_size = Vector2( 30, 30 )
disabled = true
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="AddButton" type="TextureButton" parent="."]
margin_left = 685.0
margin_right = 715.0
margin_bottom = 710.0
rect_min_size = Vector2( 30, 30 )
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 4

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="StopButton" to="." method="_on_StopButton_pressed"]
[connection signal="pressed" from="AddButton" to="." method="_on_AddButton_pressed"]
